[tool.poetry]
name = "Naive"
version = "0.0.4"
description = "This is a style component library based on Python for Qt"
authors = ["yunhai <bybxbwg@foxmail.com>"]
readme = "README.md"
packages = [
    { include = "Naive", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pyside6 = "^6.6.3.1"
requests-toolbelt = "^1.0.0"
requests = "^2.32.3"
tablib = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "baidu"
url = "https://mirror.baidu.com/pypi/simple/"
priority = "primary"